# MOTwithyolo

./: .gitignore  README.md
annotation/: annotate_video_locate.py  setup_locateanything.sh
demos/: README.md
docs/: tank_pipeline_slides.tex
jetson_pipeline/: CMakeLists.txt  README.md
jetson_pipeline/engines/: README.md
jetson_pipeline/src/: detector.cpp  detector.hpp  main.cpp  preprocess.cu  tracker.cpp  tracker.hpp
pc_pipeline/: CHANGES.md  FASTMOT_UPSTREAM_README.md  cablecar.names  track_cablecar.sh  track_tank.sh  track_tank_jetson.sh
pc_pipeline/cfg/: mot.json  mot_cablecar.json
pc_pipeline/fastmot/: detector.py  feature_extractor.py  flow.py  mot.py  videoio.py
results/: README.md
training/: augment.py  sam3_to_yolo.py  track.py  train.py  video_ann_to_yolo.py
